--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
    - CSRF_KEY=my-csrf-key
    - JWT_KEY=my-jwt-key
    - WEBDEV=true
+  env_file:
+    - .env
   ports:
    - "8080:8080"
   working_dir: /data
