--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,4 +69,5 @@ jobs:
           workflow: deploy
           repo: minetest-hosting/hosting.minetest.ch
           inputs: '{ "type": "deploy" }'
+          ref: refs/heads/main
           token: ${{ secrets.GH_DEPLOY_TOKEN }}
