--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -12,10 +12,10 @@ services:
    LOGLEVEL: debug
    WORLD_DIR: "/root/.minetest/worlds/world"
    ENABLE_FEATURES: "shell,luashell,minetest_config,docker,modmanagement"
-   DOCKER_MINETEST_CONFIG: "{{BaseDir}}/minetest.conf"
+   DOCKER_MINETEST_CONFIG: "{{.BaseDir}}/minetest.conf"
    DOCKER_MINETEST_PORT: {{.Port}}
    DOCKER_NETWORK: "{{.ServerShortID}}"
-   DOCKER_WORLD_DIR: "{{BaseDir}}/dev/world"
+   DOCKER_WORLD_DIR: "{{.BaseDir}}/dev/world"
    DOCKER_MINETEST_CONTAINER: "{{.ServerShortID}}_engine"
   volumes:
    - "./world:/root/.minetest/worlds/world"
