--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
    - CSRF_KEY=my-csrf-key
    - JWT_KEY=my-jwt-key
    - WEBDEV=true
-   - ENABLE_WORKER=true
+#   - ENABLE_WORKER=true
+   - ENABLE_DUMMY_WORKER=true
   env_file:
     - .env
   ports:
