--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -11,6 +11,7 @@ services:
    COOKIE_SECURE: "true"
    LOGLEVEL: debug
    WORLD_DIR: "/root/.minetest/worlds/world"
+   SERVER_NAME: "{{.Servername}}"
    ENABLE_FEATURES: "shell,luashell,minetest_config,docker,modmanagement"
    DOCKER_HOSTNAME: "ui-{{.ServerShortID}}"
    DOCKER_MINETEST_CONFIG: "{{.BaseDir}}/minetest.conf"
