--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     - "traefik.http.services.{{.ServerShortID}}.loadbalancer.server.port=8080"
     - "traefik.http.routers.{{.ServerShortID}}.entrypoints=websecure"
     - "traefik.http.routers.{{.ServerShortID}}.tls.certresolver=default"
+  restart: always
 
 networks:
  terminator:
