--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -18,7 +18,7 @@ services:
    DOCKER_MINETEST_PORT: {{.Port}}
    DOCKER_NETWORK: "network-{{.ServerShortID}},terminator"
    DOCKER_WORLD_DIR: "{{.BaseDir}}/world"
-   DOCKER_MINETEST_CONTAINER: "{{.ServerShortID}}_engine"
+   DOCKER_MINETEST_CONTAINER: "{{.Enginename}}"
   volumes:
    - "./world:/root/.minetest/worlds/world"
    - "/var/run/docker.sock:/var/run/docker.sock:ro"
