--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3.6"
 
 services:
+ hosting_webapp:
+  image: node:19.2.0-alpine3.15
+  volumes:
+   - "./:/app"
+  working_dir: /app/public
+  command: ["npm", "ci"]
+
  hosting:
   image: golang:1.20.7
   volumes:
