--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -15,7 +15,7 @@ services:
    ENABLE_FEATURES: "shell,luashell,minetest_config,docker,modmanagement"
    MINETEST_CONFIG: "/minetest.conf"
    DOCKER_HOSTNAME: "ui-{{.ServerShortID}}"
-   DOCKER_MINETEST_CONFIG: "{{.BaseDir}}/minetest.conf"
+   DOCKER_MINETEST_CONFIG: "{{.BaseDir}}/world/minetest.conf"
    DOCKER_MINETEST_PORT: {{.Port}}
    DOCKER_NETWORK: "network-{{.ServerShortID}},terminator"
    DOCKER_WORLD_DIR: "{{.BaseDir}}/world"
