--- a/public/package.json
+++ b/public/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@vuepic/vue-datepicker": "^6.1.0",
     "bootswatch": "^5.3.1",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "jshint": "2.13.6",
