--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -41,6 +41,26 @@ services:
     - "traefik.http.middlewares.{{.ServerShortID}}-stripprefix.stripprefix.prefixes=/ui"
   restart: always
 
+ nginx:
+  image: nginx:1.25.2
+  networks:
+   - terminator
+   - network-{{.ServerShortID}}
+  restart: always
+  labels:
+    - "promtail=true"
+    - "traefik.enable=true"
+    - "traefik.docker.network=terminator"
+    - "traefik.http.services.{{.ServerShortID}}.loadbalancer.server.port=8080"
+    - "traefik.http.routers.{{.ServerShortID}}.rule=Host(`{{.Hostname}}`) && PathPrefix(`/ui`)"
+    - "traefik.http.routers.{{.ServerShortID}}.entrypoints=websecure"
+    - "traefik.http.routers.{{.ServerShortID}}.tls.certresolver=default"
+    - "traefik.http.routers.{{.ServerShortID}}.middlewares={{.ServerShortID}}-stripprefix"
+    - "traefik.http.middlewares.{{.ServerShortID}}-stripprefix.stripprefix.prefixes=/ui"
+  volumes:
+   - "./nginx.conf:/etc/nginx/nginx.conf:ro"
+   - "./world/www:/www"
+
 networks:
  terminator:
   external: true
