fix nginx config

--- a/worker/server_setup/nginx.conf
+++ b/worker/server_setup/nginx.conf
@@ -29,8 +29,8 @@ http {
         listen 80;
         server_name localhost;
 
-        location /www/ {
-            root /;
+        location / {
+            root /www/;
             autoindex on;
         }
     }
