--- a/worker/server_setup/minetest.conf
+++ b/worker/server_setup/minetest.conf
@@ -6,4 +6,4 @@ port = {{.Server.Port}}
 server_announce = false
 server_description = {{.Server.Name}}
 max_users = 15
-motd = Welcome for {{.Server.Name}}
+motd = Welcome to {{.Server.Name}}
