enable `mediaserver` per default

--- a/worker/server_setup/minetest.conf
+++ b/worker/server_setup/minetest.conf
@@ -7,3 +7,4 @@ server_announce = false
 server_description = {{.Server.Name}}
 max_users = 15
 motd = Welcome to {{.Server.Name}}
+remote_media = https://{{.Hostname}}/ui/api/media/
