--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -8,7 +8,7 @@ services:
    - network-{{.ServerShortID}}
   environment:
    COOKIE_DOMAIN: "{{.Hostname}}"
-   COOKIE_PATH: "/ui"
+   COOKIE_PATH: "/ui/"
    COOKIE_SECURE: "true"
    JWT_KEY: "{{.Server.JWTKey}}"
    LOGLEVEL: debug
