--- a/worker/provision/docker-compose.yml
+++ b/worker/provision/docker-compose.yml
@@ -46,6 +46,9 @@ services:
    - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
    - "--entrypoints.web.http.redirections.entrypoint.permanent=true"
    - "--entrypoints.websecure.address=:443"
+   - "--entrypoints.websecure.transport.idleTimeout=1800s"
+   - "--entrypoints.websecure.transport.respondingTimeouts.readTimeout=1800s"
+   - "--entrypoints.websecure.transport.respondingTimeouts.writeTimeout=1800s"
    - "--certificatesresolvers.default.acme.tlschallenge=true"
    - "--certificatesresolvers.default.acme.email=thomas@rudin.io"
    - "--certificatesresolvers.default.acme.storage=/letsencrypt/acme.json"
