--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,30 @@ jobs:
     - uses: shogo82148/actions-goveralls@v1.9.0
       with:
         path-to-profile: profile.cov
+
+
+    - name: Build docker image
+      run: |
+        docker build . -t ghcr.io/minetest-hosting/mt-hosting-manager:latest
+
+    - name: Log in to the Container registry
+      if: success() && github.ref == 'refs/heads/master'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push docker image
+      if: success() && github.ref == 'refs/heads/master'
+      run: |
+        docker push ghcr.io/minetest-hosting/mt-hosting-manager:latest
+
+    - name: Trigger deployment on hosting.minetest.ch
+      if: success() && github.ref == 'refs/heads/master'
+      uses: benc-uk/workflow-dispatch@v1.2.4
+      with:
+        workflow: deploy
+        repo: minetest-hosting/hosting.minetest.ch
+        ref: refs/heads/main
+        token: ${{ secrets.GH_DEPLOY_TOKEN }}
