--- a/worker/server_setup/docker-compose.yml
+++ b/worker/server_setup/docker-compose.yml
@@ -21,7 +21,7 @@ services:
    AUTORECONFIGURE_MODS: "true"
    ENABLE_FEATURES: "shell,luashell,minetest_config,docker,modmanagement,mediaserver,signup,chat,minetest_web"
    MINETEST_CONFIG: "/minetest.conf"
-   GEOIP_API: "https://hosting.minetest.ch/api/geoip"
+   GEOIP_API: "https://hosting.luanti.ch/api/geoip"
    DEFAULT_THEME: "flatly"
    DOCKER_HOSTNAME: "ui-{{.ServerShortID}}"
    DOCKER_MINETEST_CONFIG: "{{.BaseDir}}/world/minetest.conf"
